List View Styling Fix
Summary:
* fixes list-view layout issues
	* & list-view-tag

completes task T188

Test Plan: review tag layout

Reviewers: rjmackay, shadowhand

Reviewed By: shadowhand

Subscribers: dkobia, eyedol

Differential Revision: https://phabricator.ushahidi.com/D60

--- a/modules/UshahidiUI/media/scss/modules/list-view/_list-view-filter.scss
+++ b/modules/UshahidiUI/media/scss/modules/list-view/_list-view-filter.scss
@@ -18,7 +18,8 @@
 .list-view-filter {
 	@include grid-column(12);
 	background: $accent-color;
-	padding: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	margin: 20px 0;
 }
 
