--- a/modules/UshahidiUI/media/scss/modules/list-view/_list-view.scss
+++ b/modules/UshahidiUI/media/scss/modules/list-view/_list-view.scss
@@ -56,14 +56,14 @@
 
 %list-view-details,
 .list-view-details {
-	@include grid-column(8);
+	@include grid-column(8, $collapse: true);
 	margin-top: 5px;
 	// padding-left: 0;
 	@media #{$small} {
-		@include grid-column(10);
+		@include grid-column(10, $collapse: true);
 	}
 	@media #{$medium-up} {
-		@include grid-column(11);
+		@include grid-column(11, $collapse: true);
 		width: 87.66667%;
 	}
 }
@@ -72,7 +72,6 @@
 	@include grid-column(12);
 	@media #{$small} {
 		@include grid-column(8);
-		padding-left: 0.4em;
 	}
 }
 
@@ -160,6 +159,7 @@
 	}
 }
 
+%list-view-edit,
 .list-view-edit {
 	margin-left: 0;
 	> li {
