--- a/modules/UshahidiUI/media/scss/modules/posts/_post-list.scss
+++ b/modules/UshahidiUI/media/scss/modules/posts/_post-list.scss
@@ -17,6 +17,6 @@
 	margin-top: 10px;
 }
 
-.list-view-posts-list {
+.list-view-post-list {
 	@extend %list-view-list;
 }
